--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.password= 1234
+spring.datasource.url= jdbc:postgresql://localhost:5432/e-shop-database
+spring.datasource.username= postgres
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql= true
+spring.jpa.show-sql= false
 
+application.jwt.secretKey=secretsecretsecretsecretsecretsecretsecretsecret
+application.jwt.tokenPrefix=Bearer 
