--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 HELP.md
-target/
+target/classes/
+target/generated-sources/
+target/generated-test-sources/
+target/maven-archiver/
+target/maven-status/
+target/surefire-reports/
+target/test-classes/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -31,3 +37,4 @@ build/
 
 ### VS Code ###
 .vscode/
+/target/eShopBack-0.0.1-SNAPSHOT.jar.original
