--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.10.0.pr2</version>
         </dependency>
+
+<!--        Model Mapper-->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.5</version>
+        </dependency>
     </dependencies>
 
     <build>
