--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ application.jwt.secretKey=secretsecretsecretsecretsecretsecretsecretsecret
 application.jwt.tokenPrefix=Bearer 
 
 server.port=8080
+
+logger.debug=true
+
+server.error.include-message=always
