Выручка, Смена, Остатки и еще Обход Корса

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ server.port=8080
 logger.debug=true
 
 server.error.include-message=always
+
+spring.jackson.serialization.write-dates-as-timestamps=false
